# portDNN

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh
bench/: CMakeLists.txt  basic_sycl.cc  bench_info.cc  bench_main.cc  computecpp_version_config.h.in  fixture.h  resnet.cc  simple_convolution.cc  vgg.cc
bench/batchnorm/: base_batchnorm_fixture.h  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  resnet50.cc  resnet50_params.def  snn_batchnorm_executor.h  snn_fixture.h
bench/bias/: base_bias_fixture.h  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  net.cc  net_params.def  snn_bias_executor.h  snn_fixture.h
bench/conv2d/: arm_benchmark_functions.cc  arm_conv2d_executor.h  arm_fixture.h  arm_mobilenet.cc  arm_resnet.cc  arm_vgg.cc  arm_xception.cc  base_convolution_fixture.h  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  cudnn_benchmark_functions.cc  cudnn_conv2d_executor.h  fixture.h  mkl_benchmark_functions.cc  mkldnn_conv2d_executor.h  mobilenet.cc  mobilenet_param_set.h  mobilenet_params.def  param_set.h  resnet.cc  resnet_param_set.h  resnet_params.def  simple_convolution.cc  snn_conv2d_executor.h  snn_fixture.h  ssd_mobilenet.cc  ssd_mobilenet_param_set.h  ssd_mobilenet_params.def  vgg.cc  vgg_param_set.h  vgg_params.def  xception.cc  xception_params.def
bench/depthwise_conv2d/: arm_benchmark_functions.cc  arm_depthwise_conv2d_executor.h  arm_fixture.h  arm_mobilenet.cc  arm_xception.cc  base_depthwise_convolution_fixture.h  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  mkl_benchmark_functions.cc  mkldnn_depthwise_conv2d_executor.h  mobilenet.cc  mobilenet_param_set.h  mobilenet_params.def  param_set.h  snn_depthwise_conv2d_executor.h  snn_fixture.h  xception.cc  xception_params.def
bench/fixture/: add_arm_opencl_device_info.h  add_computecpp_info.h  add_datatype_info.h  add_sycl_device_info.h  backend_provider.h  base_executor.h  eigen_backend_provider.h  operator_typenames.h  statistic.h  string_reporter.h  syclblas_backend_provider.h  typenames.h
bench/internal/: CMakeLists.txt  plot.py  tiled_conv2d_benchmark.cc  tiled_matmul_benchmark.cc
bench/matmul/: CMakeLists.txt  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  mobilenet.cc  mobilenet_params.def  resnet.cc  resnet_params.def  simple.cc  simple_params.def  snn_fixture.h  snn_matmul_executor.h  vgg.cc  vgg_params.def
bench/pointwise/: base_pointwise_fixture.h  relu.cc  snn_fixture.h  snn_pointwise_executor.h  tanh.cc
bench/pooling/: base_pooling_fixture.h  benchmark_config.h  benchmark_functions.cc  benchmark_params.h  fixture.h  mobilenet.cc  mobilenet_param_set.h  mobilenet_params.def  param_set.h  resnet.cc  resnet_param_set.h  resnet_params.def  snn_fixture.h  snn_pooling_executor.h  vgg.cc  vgg_param_set.h  vgg_params.def
docs/: CMakeLists.txt  Doxyfile.in  OPTIONS.md  THIRD-PARTY.md  main.dox
src/: CMakeLists.txt
src/backend/: backend_provider.h  clblast_backend_provider.h  eigen_backend_provider.h  eigen_backend_snn_matmul_provider.h  snn_backend_provider.h  snn_usm_backend_provider.h  syclblas_backend_provider.h
src/batchnorm/: CMakeLists.txt  kernels.h  launch_batchnorm_inference.cc  launch_running_mean_variance.cc  launch_variance.cc  queue_batchnorm_kernel_inference.h  queue_batchnorm_kernel_inference_impl.cc.in  queue_batchnorm_kernel_inference_impl.h  queue_running_mean_variance_kernel.h  queue_running_mean_variance_kernel_impl.cc.in  queue_running_mean_variance_kernel_impl.h  queue_variance_kernel.h  queue_variance_kernel_impl.cc.in  queue_variance_kernel_impl.h
src/bias/: CMakeLists.txt  kernels.h  launch_bias_add.cc  queue_bias_kernel.h  queue_bias_kernel_impl.cc.in  queue_bias_kernel_impl.h
src/binaryop/: CMakeLists.txt  kernels.h  launch_binaryop.cc  queue_binaryop_kernel.h  queue_binaryop_kernel_impl.cc.in  queue_binaryop_kernel_impl.h
src/conv2d/: CMakeLists.txt
src/depthwise_conv2d/: CMakeLists.txt  kernel_params.h  kernels.h  launch.cc  output_size.h  queue_depthwise_conv2d.cc.in  queue_depthwise_conv2d.h  queue_depthwise_conv2d_impl.h
src/gather/: CMakeLists.txt  kernels.h  launch.cc  queue_kernel.h  queue_kernel_impl.cc.in  queue_kernel_impl.h
src/helpers/: fast_div.h  flattened_id.h  math.h  mem_utils.h  register_tile.h  register_tile.h.pump  round_power_two.h  tensor_index.h  vector_element.h  vector_io.h  vector_type.h  window_index.h  workgroup_reduce.h
src/matmul/: CMakeLists.txt  blocks.h  kernels.h  launch.cc  queue_kernel.h  queue_kernel_impl.cc.in  queue_kernel_impl.h
src/pointwise/: CMakeLists.txt  kernels.h  launch_forward_pointwise.h  launch_grad_pointwise.h  launch_pointwise_forward.cc  launch_pointwise_grad.cc  launch_relu_pointwise.cc  launch_tanh_pointwise.cc  queue_pointwise_forward.h  queue_pointwise_forward_impl.cc.in  queue_pointwise_forward_impl.h  queue_pointwise_grad.h  queue_pointwise_grad_impl.cc.in  queue_pointwise_grad_impl.h
src/pooling/: CMakeLists.txt  can_fastdiv.h  can_vectorize.h  kernels.h  launch_avg_pooling.cc  launch_max_grad_pooling.cc  launch_max_grad_pooling.h  launch_max_pooling.cc  launch_pooling.cc  operators_impl.h  queue_max_grad_kernel.h  queue_max_grad_kernel_impl.cc.in  queue_max_grad_kernel_impl.h  queue_pooling_kernel.h  queue_pooling_kernel_impl.cc.in  queue_pooling_kernel_impl.h
src/reduce/: CMakeLists.txt  default_kernel.h  kernels.h  launch_reduction.cc  queue_reduction.h  queue_reduction_impl.cc.in  queue_reduction_impl.h  queue_reduction_impl_default.cc.in  queue_reduction_impl_subgroup.cc.in  subgroup_kernel.h
src/roi_align/: CMakeLists.txt  kernels.h  launch_roi_align.cc  operators_impl.h  queue_roi_align_kernel.h  queue_roi_align_kernel_impl.cc.in  queue_roi_align_kernel_impl.h
src/scatter_nd/: CMakeLists.txt  helpers.h  kernels.h  launch_scatter_nd.cc  queue_scatter_nd_kernel.h  queue_scatter_nd_kernel_impl.cc.in  queue_scatter_nd_kernel_impl.h
test/: CMakeLists.txt  basic_sycl_test.cc  convolutions.cc
(+775 files in other folders)
